tdf#127030 PPTX export: keep fixed size of legacy shapes

Classical/legacy shapes lost their fixed size by exporting them with the
option "Resize shape to fit text".

Regression from commit 86b14cc8bd910651cef422a0f7408adc0fc51a17
(tdf#119617 Fix export of Autofit property of shapes to PPTX)

Change-Id: Iab67db113edc61f4c94a89ec1bb8df0736c26f21
Reviewed-on: https://gerrit.libreoffice.org/77888
Reviewed-by: László Németh <nemeth@numbertext.org>
Tested-by: László Németh <nemeth@numbertext.org>
(cherry picked from commit b50d1a42064c8333926166ec047d3467c83d2fd0)
Reviewed-on: https://gerrit.libreoffice.org/79060
Tested-by: Jenkins
Reviewed-by: Xisco Faulí <xiscofauli@libreoffice.org>