oox/source/export/drawingml.cxx
@@ -2726,8 +2726,9 @@ void DrawingML::WriteText( const Reference< XInterface >& rXIface, const OUStrin
             }
             else
             {
+                // tdf#127030: Only custom shapes obey the TextAutoGrowHeight option.
                 bool bTextAutoGrowHeight = false;
-                if (GetProperty(rXPropSet, "TextAutoGrowHeight"))
+                if (dynamic_cast<SvxCustomShape*>(rXIface.get()) && GetProperty(rXPropSet, "TextAutoGrowHeight"))
                     mAny >>= bTextAutoGrowHeight;
                 mpFS->singleElementNS(XML_a, (bTextAutoGrowHeight ? XML_spAutoFit : XML_noAutofit));
             }
